Prototipo para pantalla inicial. Rename a método en UsuarioManager.

--- a/PAROnline/web/index.html
+++ b/PAROnline/web/index.html
@@ -1,16 +1,133 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<head>
+    <meta charset="utf-8"/>
+    <title>Mis Compras</title>
+</head>
+<body>
+<header>
+
+    <a href="#">
+        <h2>Mis Compras</h2>
+    </a>
+
+</header>
+<section>
+    <form action="">
+        <input type="text" placeholder="Buscar producto">
+        <input type="submit" value="Buscar">
+    </form>
+
+    <header><h3>Lista de productos</h3>
+        <nav>
+            <ul>
+                <li class="python-meta ">
+                    <a href="#">Iniciar Sesión</a>
+                </li>
+                <li class="python-meta ">
+                    <a href="#">Otra opción</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div>
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/41F3LezzFBL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/416fKZY4XgL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/51c7E6ujzaL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/41kBlxslPWL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/41GXb0QWJXL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/51qsZRZeSrL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+
+        <div>
+            <div><h4>Café</h4></div>
+            <div>
+                <a href="detalle_producto.html">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/41NQRigTUdL._AC_US160_.jpg" alt="">
+                </a>
+            </div>
+
+            <div>Detalle del producto Lorem ipsum dolor sit amet, consectetur ...</div>
+        </div>
+
+    </div>
+
+</section>
+
+<footer>Mis Compras - Copyright 2017</footer>
+</body>
+</html>
+
+
+<footer>
+    Some copyright info or perhaps some author
+    info for an &lt;article&gt;?
+</footer>
+
+</body>
 </html>
