Se agrega ABM de Producto

--- a/PAROnline/web/index.html
+++ b/PAROnline/web/index.html
@@ -36,7 +36,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/41F3LezzFBL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_001.jpg" />
                 </a>
             </div>
 
@@ -48,7 +48,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/416fKZY4XgL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_002.jpg" />
                 </a>
             </div>
 
@@ -60,7 +60,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/51c7E6ujzaL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_003.jpg" />
                 </a>
             </div>
 
@@ -72,7 +72,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/41kBlxslPWL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_004.jpg" />
                 </a>
             </div>
 
@@ -84,7 +84,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/41GXb0QWJXL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_005.jpg" />
                 </a>
             </div>
 
@@ -96,7 +96,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/51qsZRZeSrL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_006.jpg" />
                 </a>
             </div>
 
@@ -108,7 +108,7 @@
             <div><h4>Café</h4></div>
             <div>
                 <a href="detalle_producto.html">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/41NQRigTUdL._AC_US160_.jpg" alt="">
+                    <img src="images/producto_test.jpg" />
                 </a>
             </div>
 
@@ -122,7 +122,6 @@
 <footer>Mis Compras - Copyright 2017</footer>
 </body>
 </html>
-
 
 <footer>
     Some copyright info or perhaps some author
